@@ -161,8 +161,8 @@ class _CallPatchX86(_CallPatchImpl):
         stack_reg = self._abi.stack_register()
 
         stack_size = sum(stack_slot_size for arg in self._args if not arg.reg)
-        stack_padding = self._cconv.stack_alignment - (
-            stack_size % self._cconv.stack_alignment
+        stack_padding = (
+            align_address(stack_size, self._cconv.stack_alignment) - stack_size
         )
         if stack_padding:
             lines.append(f"sub {stack_reg}, {stack_padding}")
