@@ -2,6 +2,7 @@
 - Added support for ARM64
 - Exposed the Assembler class
 - Added ABI.temporary_label_prefix and InsertionContext.temporary_label
+- Fixed CallPatch redundantly aligning the stack
 
 0.0.19:
 - Added support for the .byte directive
